--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "puppeteer": "^8.0.0",
     "uuid": "^8.3.2"
   }
 }
