--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node -r esm server.js",
+    "start": "nodemon -r esm server.js",
     "server": "npm run start"
   },
   "keywords": [],
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "nodemon": "^2.0.7",
     "puppeteer": "^8.0.0",
     "uuid": "^8.3.2"
   }
