--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "puppeteer": "^8.0.0",
+    "qs": "^6.7.0",
     "uuid": "^8.3.2"
   }
 }
