--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "googleapis": "^71.0.0",
     "nodemon": "^2.0.7",
     "puppeteer": "^8.0.0",
     "qs": "^6.7.0",
