--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "example-19-express",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "nodemon -r esm server.js",
+    "start": "nodemon -r esm src/server.js",
     "server": "npm run start"
   },
   "keywords": [],
